# handwriting

./: .dockerignore  .gitignore  API_DESIGN.md  APP_DEVELOPMENT_PLAN.md  App.js  DEPLOYMENT.md  DEPLOY_CELERY_RENDER.md  Dockerfile  Dockerfile.api  Dockerfile.worker  PROJECT_PLAN.md  README.md  Segmenter.py  Yolo.md  build_project.sh  crop_diagrams.py  docker-compose.dev.yml  docker-compose.yml  final_diagrams.json  live.main.fdb_latexmk  live.main.fls  live.main.tex  output_2db4f0f3.tex  render.yaml  requirements.txt  vercel.json
.vercel/: .env.preview.local  project.json
api/: alembic.ini  celery_app.py  celery_utils.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  s3_utils.py  schemas.py  tasks.py
api/alembic/: env.py
api/alembic/versions/: 01c8134a237c_add_segmentations_table_and_job_.py  2c226f914cdd_add_segmentations_table_and_job_.py  2e7a6b5e508b_add_job_page_images_table.py  88ac23c61685_add_segmentations_table.py  adbd604b3391_create_jobs_table.py  add_enhancement_columns.py
api/api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
api/routers/: __init__.py  jobs.py  upload.py
api/services/: image_enhancer.py
apps/backend_api/: alembic.ini  main.py  package.json  pyproject.toml  requirements.txt
apps/backend_api/alembic/: env.py
apps/backend_api/alembic/versions/: 02e3a785d33e_update_jobstatus_enum_and_job_model_.py  9e1fd4100675_add_refinement_and_compilation_statuses_.py
apps/backend_api/src/backend_api/: __init__.py  celery_app.py  celery_utils.py  database.py  main.py  models.py  s3_utils.py  schemas.py  tasks.py
apps/backend_api/src/backend_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/backend_api/src/backend_api/routers/: jobs.py  upload.py
apps/mobile/: App.js  README.md  app.json  package-lock.json  package.json
apps/web/: package-lock.json  package.json  tailwind.config.ts
input_pdfs/: IMG_2457.HEIC
output_latex/: test_gpt-4.1-mini.tex  test_gpt-4.1-nano.tex  test_gpt-4.1.tex  test_o4-mini.tex
pdfs/: convert_imgs_to_pdf.py
src/: config.js
src/lib/: statusUtils.js  (+1 more)
tests/: conftest.py  requirements-test.txt
(+56 files in other folders)
